<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileActivity">

    <Button
        android:id="@+id/button8"
        android:onClick="toastMe"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_marginBottom="30dp"
        android:text="@string/EditProfile"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:onClick="toastMe"
        android:id="@+id/button9"
        android:textSize="40sp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="130dp"
        android:text="@string/Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:onClick="toastMe"
        android:id="@+id/button10"
        android:textSize="40sp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Teammates"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/TimeOnCourt"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>